# productivity-app

./: Readme.md  build.bat  data.db  prod.env  start.bat
app/: Readme.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.main.config.js  webpack.main.dev.config.js  webpack.renderer.config.js  webpack.renderer.dev.config.js
app/src/main/: main.ts
app/src/renderer/: App.tsx  TimeSpentBarChart.tsx  index.tsx
app/src/renderer/components/: CurrentSessionStats.tsx  Navbar.tsx  TimeSpentBarChart.tsx  Timeline.tsx
app/src/renderer/public/: index.html
app/src/renderer/store/: currentSessionSlice.ts  store.ts
service/: .gitignore  Cargo.toml  Readme.md  build.rs
service/src/: database.rs  main.rs
service/src/entity/: event.rs  session.rs
service/src/server/: mod.rs
service/src/service/: mod.rs  windows_service.rs
